--- a/Programme/RLE-Encode/RLEV1/CMakeLists.txt
+++ b/Programme/RLE-Encode/RLEV1/CMakeLists.txt
@@ -4,8 +4,8 @@ project(RLEV1 VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-# add_executable(RLEV1 src/RLE-Encode-V1.c)
-add_executable(RLEV1 src/main.c)
+add_executable(RLEV1 src/RLE-Encode-V1.c)
+# add_executable(RLEV1 src/main.c)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
