--- a/Programme/RLE-Encode/RLEV2/CMakeLists.txt
+++ b/Programme/RLE-Encode/RLEV2/CMakeLists.txt
@@ -4,8 +4,8 @@ project(RLEV2 VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(RLEV2 src/old_rle_encode.c)
-# add_executable(RLEV2 src/RLE-Encode-V2.c)
+
+add_executable(RLEV2 src/RLE-Encode-V2.c)
 
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
