--- a/Programme/Linux-Copy/CMakeLists.txt
+++ b/Programme/Linux-Copy/CMakeLists.txt
@@ -4,7 +4,9 @@ project(Copy_with_POSIX VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(Copy_with_POSIX src/copy_with_POSIX)
+# add_executable(Copy_with_POSIX src/copy_with_POSIX)
+# add_executable(Copy_with_POSIX src/copy_with_POSIX)
+add_executable(Copy_with_POSIX src/POSIX-Linux.c)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
