finished with RLE, planed program with threads

--- a/Programme/TCP_ECHO_Server/Makefile
+++ b/Programme/TCP_ECHO_Server/Makefile
@@ -1,8 +1,8 @@
 output: TCP_echo_server.o
-	gcc TCP_echo_server.o -o output -lpthread 
+	gcc TCP_echo_server.o -o output
 
 TCP_echo_serber.o: TCP_echo_server.c
-	gcc -c TCP_echo_server.c -lpthread 
+	gcc -c TCP_echo_server.c
 
 clean:
 	rm *.o output
