rekursive BinaereSuche fertig

--- a/Programme/BinaereSuche/Makefile
+++ b/Programme/BinaereSuche/Makefile
@@ -1,8 +1,8 @@
 output: BinaereSuche.o
-	gcc BinaereSuche.o -o output -lpthread
+	gcc BinaereSuche.o -o output 
 
 TCP_echo_serber.o: BinaereSuche.c
-	gcc -c BinaereSuche.c -lpthread
+	gcc -c BinaereSuche.c 
 
 clean:
 	rm *.o output
