--- a/Programme/BinaereSuche/Makefile
+++ b/Programme/BinaereSuche/Makefile
@@ -1,8 +1,37 @@
-output: BinaereSuche.o
-	gcc BinaereSuche.o -o output 
+BinaereSuche_binary_recursiv_index: BinaereSuche_binary_recursiv_index.o
+	gcc BinaereSuche_binary_recursiv_index.o -o BinaereSuche_binary_recursiv_index 
 
-TCP_echo_serber.o: BinaereSuche.c
-	gcc -c BinaereSuche.c 
+BinaereSuche_binary_recursiv_index.o: BinaereSuche_binary_recursiv_index.c
+	gcc -c BinaereSuche_binary_recursiv_index.c 
+
+BinaereSuche_bsearch: BinaereSuche_bsearch.o
+	gcc BinaereSuche_bsearch.o -o BinaereSuche_bsearch 
+
+BinaereSuche_bsearch.o: BinaereSuche_bsearch.c
+	gcc -c BinaereSuche_bsearch.c 
+
+
+
+
+Lineare-Suche: Lineare-Suche.o
+	gcc Lineare-Suche.o -o Lineare-Suche 
+
+Lineare-Suche.o: Lineare-Suche.c
+	gcc -c Lineare-Suche.c 
+
+
+
+mitn-Rieser: mitn-Rieser.o
+	gcc mitn-Rieser.o -o mitn-Rieser
+
+mitn-Rieser.o: mitn-Rieser.c
+	gcc -c mitn-Rieser.c 
+
+
 
 clean:
-	rm *.o output
+	rm *.o BinaereSuche_binary_recursiv_index
+	rm *.o BinaereSuche_bsearch 
+	rm *.o Lineare-Suche 
+	rm *.o mitn-Rieser
+
