--- a/Programme/BinaereSuche/Makefile
+++ b/Programme/BinaereSuche/Makefile
@@ -1,37 +1,11 @@
-BinaereSuche_binary_recursiv_index: BinaereSuche_binary_recursiv_index.o
-	gcc BinaereSuche_binary_recursiv_index.o -o BinaereSuche_binary_recursiv_index 
+original: original.o
+	gcc original.o -o original 
 
-BinaereSuche_binary_recursiv_index.o: BinaereSuche_binary_recursiv_index.c
-	gcc -c BinaereSuche_binary_recursiv_index.c 
-
-BinaereSuche_bsearch: BinaereSuche_bsearch.o
-	gcc BinaereSuche_bsearch.o -o BinaereSuche_bsearch 
-
-BinaereSuche_bsearch.o: BinaereSuche_bsearch.c
-	gcc -c BinaereSuche_bsearch.c 
-
-
-
-
-Lineare-Suche: Lineare-Suche.o
-	gcc Lineare-Suche.o -o Lineare-Suche 
-
-Lineare-Suche.o: Lineare-Suche.c
-	gcc -c Lineare-Suche.c 
-
-
-
-mitn-Rieser: mitn-Rieser.o
-	gcc mitn-Rieser.o -o mitn-Rieser
-
-mitn-Rieser.o: mitn-Rieser.c
-	gcc -c mitn-Rieser.c 
-
+original.o: original.c
+	gcc -c original.c 
 
 
 clean:
-	rm *.o BinaereSuche_binary_recursiv_index
-	rm *.o BinaereSuche_bsearch 
-	rm *.o Lineare-Suche 
-	rm *.o mitn-Rieser
+	rm *.o original
+
 
