--- a/Programme/BinaereSuche/Makefile
+++ b/Programme/BinaereSuche/Makefile
@@ -1,11 +1,26 @@
-original: original.o
-	gcc original.o -o original 
+all: bsearch original binary_recursiv binary_recursiv_index linearsearch mitn-Rieser
 
-original.o: original.c
-	gcc -c original.c 
+bsearch: bsearch.c
+	gcc bsearch.c -o bsearch
+
+original: original.c
+	gcc original.c -o original 
+
+binary_recursiv: binary_recursiv.c
+	gcc binary_recursiv.c -o binary_recursiv 
+
+binary_recursiv_index: binary_recursiv_index.c
+	gcc binary_recursiv_index.c -o binary_recursiv_index 
+
+
+linearsearch: linearsearch.c
+	gcc linearsearch.c -o linearsearch
+
+mitn-Rieser: mitn-Rieser.c
+	gcc mitn-Rieser.c -o mitn-Rieser
 
 
 clean:
-	rm *.o original
+	rm original bsearch binary_recursiv binary_recursiv_index linearsearch mitn-Rieser
 
 
