comparising lin, bs, bsearch

--- a/Programme/BinaereSuche/Makefile
+++ b/Programme/BinaereSuche/Makefile
@@ -1,26 +1,7 @@
-all: bsearch original binary_recursiv binary_recursiv_index linearsearch mitn-Rieser
-
-bsearch: bsearch.c
-	gcc bsearch.c -o bsearch
-
-original: original.c
-	gcc original.c -o original 
-
-binary_recursiv: binary_recursiv.c
-	gcc binary_recursiv.c -o binary_recursiv 
-
-binary_recursiv_index: binary_recursiv_index.c
-	gcc binary_recursiv_index.c -o binary_recursiv_index 
-
-
-linearsearch: linearsearch.c
-	gcc linearsearch.c -o linearsearch
-
-mitn-Rieser: mitn-Rieser.c
-	gcc mitn-Rieser.c -o mitn-Rieser
-
+bsearchFabioPlunser:
+	gcc bsearchFabioPlunser.c -o output
 
 clean:
-	rm original bsearch binary_recursiv binary_recursiv_index linearsearch mitn-Rieser
+	rm output
 
 
