FSST fertig befriedigend

--- a/Programme/openssl/openssl-Programm/Makefile
+++ b/Programme/openssl/openssl-Programm/Makefile
@@ -1,5 +1,7 @@
 main: main.c 
-	gcc main.c -libcrypto   -o main
-	./main
+	gcc main.c -lcrypto  -o main
+
+test: test.c 
+	gcc test.c -lcrypto  -o test
 clean: 
 	rm *.c
