--- a/Programme/openssl/openssl-Programm/Makefile
+++ b/Programme/openssl/openssl-Programm/Makefile
@@ -1,5 +1,5 @@
-main: main.c 
-	gcc main.c -lcrypto  -o main
+main: main.c EVP.c
+	gcc main.c EVP.c -lcrypto  -o main
 
 test: test.c 
 	gcc test.c -lcrypto  -o test
