--- a/Programme/openssl/openssl-Programm/Makefile
+++ b/Programme/openssl/openssl-Programm/Makefile
@@ -1,10 +1,8 @@
-main: main.c EVP.c
-	gcc main.c EVP.c -lcrypto -lssl -o main
+main: main.c
+	gcc main.c -lcrypto -o main
 
-# main: main.c 
-# 	gcc main.c -lcrypto  -o main
 
 
 
 clean: 
-	rm *.csudo
+	rm *.
